k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microshop-dev
  labels:
    app.kubernetes.io/part-of: microshop
    environment: dev
